examples/test/testpolicy8418.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8418
  namespace: namespace380
spec:
  podSelector:
    matchLabels:
      key4: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value41
          key46: value39
          key33: value32
      podSelector:
        matchLabels:
          key30: value22
          key8: value27
          key27: value35
